Fixed phone menubars covering the page in Chrome mobile

--- a/res/huroutes.css
+++ b/res/huroutes.css
@@ -35,30 +35,23 @@ p {
  */
 
 #main {
-  height: 100vh;
   margin-top: 0;
   padding: 0;
   position: fixed;
-  left: 10vw; top: 0; right: 0; bottom: 0;
-  width: 90vw;
-}
-
-@media (min-width: 768px) {
-  #main {
-    position: static;
-  }
+  top: 0; right: 0;
+  width: 90vw; height: 100%;
 }
 
 #sidebar {
   background: #13192e;
   color: #fff;
   display: block;
-  left: 0; top: 0; right: 10vw; bottom: 0;
+  left: 0; top: 0;
   padding: 0;
   position: fixed;
   overflow-x: hidden;
   overflow-y: auto;
-  width: 90vw; height: 100vh;
+  width: 90vw; height: 100%;
   transition: left 0.25s ease;
   z-index: 1032;
 }
@@ -69,7 +62,7 @@ p {
 
 @media (min-width: 768px) {
   #sidebar {
-    left: 0; right: 0;
+    left: 0;
     transition: none;
   }
   #sidebar.closed {
@@ -237,12 +230,7 @@ ul ul ul ul ul a.dropdown-toggle {
  */
 
 .map {
-  top: 0;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
-  border-left: 1px solid #aaa;
-  padding: 0;
+  width: 100%; height: 100%;
 }
 
 .leaflet-bottom.leaflet-right .leaflet-control-scale {
